HVP-49: Fix title truncation

--- a/styles/scss/application.scss
+++ b/styles/scss/application.scss
@@ -170,6 +170,7 @@ a {
     & > .h5peditor-label {
       padding: 0.0625em 0 0;
       margin: 0 1.5em;
+      overflow: hidden;
       white-space: nowrap;
       line-height: 2.25em;
       font-weight: normal;
